--- a/script/RNotebook/ioi_3.Rmd
+++ b/script/RNotebook/ioi_3.Rmd
@@ -7,10 +7,11 @@ editor_options:
 ---
 
 ##### Description: This is a summary of all analyses for a tempo (IOIs).
-
+  - data <- data_ioi_3.csv
+  
 ## Experimental Design{#design}
 - Independent variables: Condition (2 levels: teaching vs. performing) x Skill (2 levels: articulation vs. dynamics)
-- Dependent variables: Interonset intervals, (**Not yet**: variability (SD/mean IOI))
+- Dependent variables: Interonset intervals, variability (SD/mean IOI)
 
 ### Main predictions
 Participants will play slower while teaching regardless of the skills.
@@ -33,7 +34,7 @@ theme_update(text = element_text(size = 20, family = "Helvetica Neue LT Std 57 C
 ```
 
 ```{r extract, include = FALSE}
-df_ioi <- read.csv("./trimmed/data_ioi.csv", header = T, sep = ",", dec = ".") # read a trimmed csv
+df_ioi <- read.csv("./trimmed/data_ioi_3.csv", header = T, sep = ",", dec = ".") # read a trimmed csv
 
 # SubNr as a factor
 df_ioi$SubNr <- as.factor(df_ioi$SubNr)
@@ -117,22 +118,36 @@ p_ioi_art_all_box <- ggplot(data = ioi_art, aes(x = Condition, y = Mean, fill = 
 p_ioi_art_all_box
 ```
 
-#### Statistics (TBC)
+#### Statistics
+##### Normality check
+```{r normality1, echo = FALSE}
+# Normality check
+ioi_art_norm <- by(ioi_art$Mean, list(ioi_art$Condition), shapiro.test)
+print(ioi_art_norm)
+```
+
+##### Paired t-test
+```{r stats1, echo = FALSE}
+ioi_art_ttest <- t.test(ioi_art$Mean[ioi_art$Condition == "teaching"], ioi_art$Mean[ioi_art$Condition == "performing"], paired = TRUE)
+print(ioi_art_ttest)
+```
+
+##### Effect size
+```{r stats2, echo = FALSE}
+ioi_art_cohend <- cohen.d(ioi_art$Mean, ioi_art$Condition, paired = TRUE)
+print(ioi_art_cohend)
+```
 
 ### 3. Subcomponent change - individual{#art_ind_phrase}
 - Compare normIOIs at which Subcomponent changes (e.g., Legato to Staccato) with others fir each participant.
 
 ```{r ioi_art_ch, echo = FALSE}
-# Define subcomponent change
-df_ioi_art$Change <- "No"
-df_ioi_art$Change[df_ioi_art$Interval == 5 | df_ioi_art$Interval == 8 | df_ioi_art$Interval == 17 | df_ioi_art$Interval == 20 | df_ioi_art$Interval == 39 | df_ioi_art$Interval == 47] <- "Yes"
-
 # For each individual
-ioi_art_ch <- aggregate(normIOI~SubNr*Condition*Skill*Change, data = df_ioi_art,
+ioi_art_ch <- aggregate(normIOI~SubNr*Condition*Skill*Boundary, data = df_ioi_art,
                     FUN = function(x){c(N = length(x), mean = mean(x), sd = sd(x))})
 ioi_art_ch <- cbind(ioi_art_ch[,1:4], as.data.frame(ioi_art_ch[,5]))
 # Change colnames
-colnames(ioi_art_ch) <- c("SubNr", "Condition", "Skill", "Change", "N", "Mean", "SD")
+colnames(ioi_art_ch) <- c("SubNr", "Condition", "Skill", "Boundary", "N", "Mean", "SD")
 print(ioi_art_ch)
 ```
 
@@ -146,7 +161,7 @@ p_ioi_art_ch <- ggplot(data = ioi_art_ch, aes(x = SubNr, y = Mean, fill = Condit
   geom_bar(stat = "identity", position = position_dodge()) +
   geom_errorbar(aes(ymin = Mean - SD, ymax = Mean + SD),
                 width = .2, position = position_dodge(.9)) +
-  facet_grid(Change ~ .) +
+  facet_grid(Boundary ~ .) +
   geom_hline(yintercept = 1, linetype = "dashed") + # Tempo
   labs(y = "Normalised IOI", subtitle = "IOI: Articulation")
 p_ioi_art_ch
@@ -158,11 +173,11 @@ p_ioi_art_ch
 
 ```{r ioi_art_ch_all, echo = FALSE}
 # Group mean
-ioi_art_ch_all <- aggregate(Mean~Condition*Skill*Change, data = ioi_art_ch,
+ioi_art_ch_all <- aggregate(Mean~Condition*Skill*Boundary, data = ioi_art_ch,
                        FUN = function(x){round(c(N = length(x), mean = mean(x), sd = sd(x), sem = sd(x)/sqrt(length(x))), 4)})
 ioi_art_ch_all <- cbind(ioi_art_ch_all[,1:3], as.data.frame(ioi_art_ch_all[,4]))
 # Change colnames
-colnames(ioi_art_ch_all) <- c("Condition", "Skill", "Change", "N", "Mean", "SD", "SEM")
+colnames(ioi_art_ch_all) <- c("Condition", "Skill", "Boundary", "N", "Mean", "SD", "SEM")
 print(ioi_art_ch_all)
 ```
 
@@ -171,7 +186,7 @@ print(ioi_art_ch_all)
 - A dashed line represents the ideal tempo
 
 ```{r ioi_art_ch_all_bar, echo = FALSE}
-p_ioi_art_ch_all_bar <- ggplot(data = ioi_art_ch_all, aes(x = Change, y = Mean, fill = Condition)) +
+p_ioi_art_ch_all_bar <- ggplot(data = ioi_art_ch_all, aes(x = Boundary, y = Mean, fill = Condition)) +
   geom_bar(stat = "identity", position = position_dodge()) +
   geom_errorbar(aes(ymin = Mean - SEM, ymax = Mean + SEM),
                 width=.2, position = position_dodge(.9)) +
@@ -184,7 +199,7 @@ p_ioi_art_ch_all_bar
 - A dashed line represents the ideal tempo
 
 ```{r ioi_art_ch_all_box, echo = FALSE}
-p_ioi_art_ch_box <- ggplot(data = ioi_art_ch, aes(x = Change, y = Mean, fill = Condition)) +
+p_ioi_art_ch_box <- ggplot(data = ioi_art_ch, aes(x = Boundary, y = Mean, fill = Condition)) +
   geom_boxplot() +
   geom_dotplot(binaxis = "y", stackdir = "center", dotsize = 1, position = position_dodge(0.75)) +
   geom_hline(yintercept = 1, linetype = "dashed") + # Tempo
@@ -192,7 +207,33 @@ p_ioi_art_ch_box <- ggplot(data = ioi_art_ch, aes(x = Change, y = Mean, fill = C
 p_ioi_art_ch_box
 ```
 
-#### Statistics (TBC)
+#### Statistics
+##### Normality check
+```{r normality2, echo = FALSE}
+ioi_art_ch_norm <- by(ioi_art_ch$Mean, list(ioi_art_ch$Condition, ioi_art_ch$Boundary), shapiro.test)
+print(ioi_art_ch_norm)
+```
+
+##### Two-way ANOVA (ez)
+```{r stats3, echo = FALSE}
+ioi_art_ch_aov <- ezANOVA(
+  data = df_ioi_art
+  , dv = .(normIOI)
+  , wid = .(SubNr)
+  , within = .(Condition, Boundary)
+  , type = 3
+  , detailed = TRUE
+)
+ioi_art_ch_aov$ANOVA$F <- round(ioi_art_ch_aov$ANOVA$F, 4)
+ioi_art_ch_aov$ANOVA$p <- round(ioi_art_ch_aov$ANOVA$p, 4)
+print(ioi_art_ch_aov$ANOVA)
+```
+
+##### Two-way ANOVA (aov)
+```{r stats4, echo = FALSE}
+ioi_art_ch_aov_2 <- aov(Mean ~ Condition*Boundary + Error(SubNr/(Condition*Boundary)), data = ioi_art_ch)
+print(summary(ioi_art_ch_aov_2))
+```
 
 ### 5. Trial by trial - individual{#art_ind_trial}
 - Average normIOIs for each trial for each participant.
@@ -246,6 +287,161 @@ p_ioi_art_trial_all <- ggplot(data = ioi_art_trial_all, aes(x = TrialNr, y = Mea
   geom_errorbar(aes(ymin = Mean - SEM, ymax = Mean + SEM), width = .2, position = position_dodge(.2)) + 
   labs(x = "Trial", y = "Normalised IOI", subtitle = "IOI: Articulation") + scale_x_continuous(breaks=seq(1,8,1))
 p_ioi_art_trial_all
+```
+
+### 7. Variability all - individual{#art_ind_var_all}
+- Average variability for each participant.
+- normIOI variability = SD/mean IOI (per trial)
+
+```{r ioi_art_var, echo = FALSE}
+# Create a data frame for variability (SD/)
+df_ioi_art_var <- data.frame()
+for (subnr in unique(df_ioi_art$SubNr)){
+  for (block in unique(df_ioi_art$BlockNr)){
+    cond = as.character(unique(df_ioi_art$Condition[df_ioi_art$SubNr == subnr & df_ioi_art$BlockNr == block]))
+    skill = as.character(unique(df_ioi_art$Skill[df_ioi_art$SubNr == subnr & df_ioi_art$BlockNr == block]))
+    for (trial in unique(df_ioi_art$TrialNr)){
+      df_current <- df_ioi_art %>% dplyr::filter(SubNr == subnr & BlockNr == block & TrialNr == trial)
+      if (nrow(df_current) != 0){
+        df_ioi_art_var <- rbind(df_ioi_art_var, 
+                                data.frame(subnr, block, trial, cond, skill, sd(df_current$IOI)/mean(df_current$IOI)))
+      }
+    }
+  }
+}
+colnames(df_ioi_art_var) <- c("SubNr", "BlockNr", "TrialNr", "Condition", "Skill", "Variability")
+
+# Average variability
+# For each individual
+ioi_art_var <- aggregate(Variability~SubNr*Condition*Skill, data = df_ioi_art_var,
+                     FUN = function(x){c(N = length(x), mean = mean(x), sd = sd(x))})
+ioi_art_var <- cbind(ioi_art_var[,1:3], as.data.frame(ioi_art_var[,4]))
+# Change colnames
+colnames(ioi_art_var) <- c("SubNr", "Condition", "Skill", "N", "Mean", "SD")
+print(ioi_art_var)
+```
+
+
+#### Plot
+##### Bar graph
+- Error bars show SD of the mean
+- A dashed line represents the tempo given by a metronome (80bpm)
+
+```{r ioi_art_var_bar, echo = FALSE}
+p_ioi_art_var <- ggplot(data = ioi_art_var, aes(x = SubNr, y = Mean, fill = Condition)) +
+  geom_bar(stat = "identity", position = position_dodge()) +
+  geom_errorbar(aes(ymin = Mean - SD, ymax = Mean + SD),
+                width = .2, position = position_dodge(1)) +
+  labs(y = "Variability (SD/mean IOI)", subtitle = "IOI: Articulation")
+p_ioi_art_var
+```
+
+### 8. Variability all - group{#art_group_var_all}
+- Average variability for each condition.
+
+```{r ioi_art_var_all, echo = FALSE}
+# Group mean
+ioi_art_var_all <- aggregate(Mean~Condition*Skill, data = ioi_art_var,
+                           FUN = function(x){round(c(N = length(x), mean = mean(x), sd = sd(x), sem = sd(x)/sqrt(length(x))), 4)})
+ioi_art_var_all <- cbind(ioi_art_var_all[,1:2], as.data.frame(ioi_art_var_all[,3]))
+# Change colnames
+colnames(ioi_art_var_all) <- c("Condition", "Skill", "N", "Mean", "SD", "SEM")
+print(ioi_art_var_all)
+```
+
+#### Plot
+##### Bar graph
+- Error bars show SEM of the mean
+
+```{r ioi_art_var_all_bar, echo = FALSE}
+p_ioi_art_var_all <- ggplot(data = ioi_art_var_all, aes(x = Condition, y = Mean, fill = Condition)) +
+  geom_bar(stat = "identity", position = position_dodge()) +
+  geom_errorbar(aes(ymin = Mean - SEM, ymax = Mean + SEM),
+                width = .2, position = position_dodge()) +
+  labs(y = "Variability (SD/mean IOI)", subtitle = "IOI: Articulation") +
+  theme(legend.position = "None")
+p_ioi_art_var_all
+```
+
+##### Box plot
+```{r ioi_art_var_all_box, echo = FALSE}
+p_ioi_art_var_box <- ggplot(data = ioi_art_var, aes(x = Condition, y = Mean, fill = Condition)) +
+  geom_boxplot() +
+  geom_dotplot(binaxis = "y", stackdir = "center", dotsize = 1) +
+  labs(y = "Variability (SD/mean IOI)", subtitle = "IOI: Articulation") +
+  theme(legend.position = "None")
+p_ioi_art_var_box
+```
+
+#### Statistics
+##### Normality check
+```{r normality3, echo = FALSE}
+ioi_art_var_norm <- by(ioi_art_var$Mean, list(ioi_art_var$Condition), shapiro.test)
+print(ioi_art_var_norm)
+```
+- Violate the normality assumption
+
+##### Paired t-test
+```{r stats5, echo = FALSE}
+ioi_art_var_ttest <- t.test(ioi_art_var$Mean[ioi_art_var$Condition == "teaching"], ioi_art_var$Mean[ioi_art_var$Condition == "performing"], paired = TRUE)
+print(ioi_art_var_ttest)
+```
+
+##### Effect size
+```{r stats6, echo = FALSE}
+ioi_art_var_cohend <- cohen.d(ioi_art_var$Mean, ioi_art_var$Condition, paired = TRUE)
+print(ioi_art_var_cohend)
+```
+
+### 9. Variability trial-by-trial - individual{#art_ind_var_trial}
+- Average variability for each trial for each participant.
+
+```{r ioi_art_var_trial, echo = FALSE}
+# For each individual
+ioi_art_var_trial <- aggregate(Variability~SubNr*Condition*Skill*TrialNr, data = df_ioi_art_var,
+                         FUN = function(x){c(N = length(x), mean = mean(x))})
+ioi_art_var_trial <- cbind(ioi_art_var_trial[,1:4], as.data.frame(ioi_art_var_trial[,5]))
+# Change colnames
+colnames(ioi_art_var_trial) <- c("SubNr", "Condition", "Skill", "TrialNr", "N", "Mean")
+print(ioi_art_var_trial)
+```
+
+#### Plot
+##### Line graph
+```{r ioi_art_var_trial_line, echo = FALSE, fig.height = 8}
+p_ioi_art_var_trial <- ggplot(data = ioi_art_var_trial, aes(x = TrialNr, y = Mean, group = Condition, colour = Condition)) +
+  geom_line() +
+  geom_point() +
+  facet_wrap(SubNr ~ .) + 
+  labs(x = "Trial", y = "Variability (SD/mean IOI)", subtitle = "IOI: Articulation") + scale_x_continuous(breaks=seq(1,8,1))
+p_ioi_art_var_trial
+```
+
+### 10. Variability trial-by-trial - group{#art_group_var_trial}
+- Average variability for each trial for each condition.
+
+```{r ioi_art_var_trial_all, echo = FALSE}
+# Group mean
+ioi_art_var_trial_all <- aggregate(Mean~Condition*Skill*TrialNr, data = ioi_art_var_trial,
+                           FUN = function(x){round(c(N = length(x), mean = mean(x), sd = sd(x), sem = sd(x)/sqrt(length(x))), 4)})
+ioi_art_var_trial_all <- cbind(ioi_art_var_trial_all[,1:3], as.data.frame(ioi_art_var_trial_all[,4]))
+# Change colnames
+colnames(ioi_art_var_trial_all) <- c("Condition", "Skill", "TrialNr", "N", "Mean", "SD", "SEM")
+print(ioi_art_var_trial_all)
+```
+
+#### Plot
+##### Line graph
+- Error bars show SEM of the mean
+
+```{r ioi_art_var_trial_all_line, echo = FALSE}
+p_ioi_art_var_trial_all <- ggplot(data = ioi_art_var_trial_all, 
+                                  aes(x = TrialNr, y = Mean, group = Condition, colour = Condition)) +
+  geom_line(position = position_dodge(.2)) +
+  geom_point(position = position_dodge(.2)) +
+  geom_errorbar(aes(ymin = Mean - SEM, ymax = Mean + SEM), width = .2, position = position_dodge(.2)) + 
+  labs(x = "Trial", y = "Variability (SD/mean IOI)", subtitle = "IOI: Articulation") + scale_x_continuous(breaks=seq(1,8,1))
+p_ioi_art_var_trial_all
 ```
 
 ###########
@@ -322,22 +518,35 @@ p_ioi_dyn_all_box <- ggplot(data = ioi_dyn, aes(x = Condition, y = Mean, fill = 
 p_ioi_dyn_all_box
 ```
 
-#### Statistics (TBC)
+#### Statistics
+##### Normality check
+```{r normality4, echo = FALSE}
+# Normality check
+ioi_dyn_norm <- by(ioi_dyn$Mean, list(ioi_dyn$Condition), shapiro.test)
+print(ioi_dyn_norm)
+```
+
+```{r stats7, echo = FALSE}
+ioi_dyn_ttest <- t.test(ioi_dyn$Mean[ioi_dyn$Condition == "teaching"], ioi_dyn$Mean[ioi_dyn$Condition == "performing"], paired = TRUE)
+print(ioi_dyn_ttest)
+```
+
+##### Effect size
+```{r stats8, echo = FALSE}
+ioi_dyn_cohend <- cohen.d(ioi_dyn$Mean, ioi_dyn$Condition, paired = TRUE)
+print(ioi_dyn_cohend)
+```
 
 ### 3. Subcomponent changes - individual{#dyn_ind_phrase}
 - Compare normIOIs at which Subcomponent changes (e.g., Forte to Piano) with others fir each participant.
 
 ```{r ioi_dyn_ch, echo = FALSE}
-# Define phrase boundaries
-df_ioi_dyn$Change <- "No"
-df_ioi_dyn$Change[df_ioi_dyn$Interval == 5 | df_ioi_dyn$Interval == 8 | df_ioi_dyn$Interval == 17 | df_ioi_dyn$Interval == 20 | df_ioi_dyn$Interval == 39 | df_ioi_dyn$Interval == 47] <- "Yes"
-
 # For each individual
-ioi_dyn_ch <- aggregate(normIOI~SubNr*Condition*Skill*Change, data = df_ioi_dyn,
+ioi_dyn_ch <- aggregate(normIOI~SubNr*Condition*Skill*Boundary, data = df_ioi_dyn,
                     FUN = function(x){c(N = length(x), mean = mean(x), sd = sd(x))})
 ioi_dyn_ch <- cbind(ioi_dyn_ch[,1:4], as.data.frame(ioi_dyn_ch[,5]))
 # Change colnames
-colnames(ioi_dyn_ch) <- c("SubNr", "Condition", "Skill", "Change", "N", "Mean", "SD")
+colnames(ioi_dyn_ch) <- c("SubNr", "Condition", "Skill", "Boundary", "N", "Mean", "SD")
 print(ioi_dyn_ch)
 ```
 
@@ -351,7 +560,7 @@ p_ioi_dyn_ch <- ggplot(data = ioi_dyn_ch, aes(x = SubNr, y = Mean, fill = Condit
   geom_bar(stat = "identity", position = position_dodge()) +
   geom_errorbar(aes(ymin = Mean - SD, ymax = Mean + SD),
                 width = .2, position = position_dodge(.9)) +
-  facet_grid(Change ~ .) +
+  facet_grid(Boundary ~ .) +
   geom_hline(yintercept = 1, linetype = "dashed") + # Tempo
   labs(y = "Normalised IOI", subtitle = "IOI: Dynamics")
 p_ioi_dyn_ch
@@ -363,11 +572,11 @@ p_ioi_dyn_ch
 
 ```{r ioi_dyn_ch_all, echo = FALSE}
 # Group mean
-ioi_dyn_ch_all <- aggregate(Mean~Condition*Skill*Change, data = ioi_dyn_ch,
+ioi_dyn_ch_all <- aggregate(Mean~Condition*Skill*Boundary, data = ioi_dyn_ch,
                        FUN = function(x){round(c(N = length(x), mean = mean(x), sd = sd(x), sem = sd(x)/sqrt(length(x))), 4)})
 ioi_dyn_ch_all <- cbind(ioi_dyn_ch_all[,1:3], as.data.frame(ioi_dyn_ch_all[,4]))
 # Change colnames
-colnames(ioi_dyn_ch_all) <- c("Condition", "Skill", "Change", "N", "Mean", "SD", "SEM")
+colnames(ioi_dyn_ch_all) <- c("Condition", "Skill", "Boundary", "N", "Mean", "SD", "SEM")
 print(ioi_dyn_ch_all)
 ```
 
@@ -377,7 +586,7 @@ print(ioi_dyn_ch_all)
 - A dashed line represents the ideal tempo
 
 ```{r ioi_dyn_ch_all_bar, echo = FALSE}
-p_ioi_dyn_ch_all_bar <- ggplot(data = ioi_dyn_ch_all, aes(x = Change, y = Mean, fill = Condition)) +
+p_ioi_dyn_ch_all_bar <- ggplot(data = ioi_dyn_ch_all, aes(x = Boundary, y = Mean, fill = Condition)) +
   geom_bar(stat = "identity", position = position_dodge()) +
   geom_errorbar(aes(ymin = Mean - SEM, ymax = Mean + SEM),
                 width=.2, position = position_dodge(.9)) +
@@ -390,7 +599,7 @@ p_ioi_dyn_ch_all_bar
 - A dashed line represents the ideal tempo
 
 ```{r ioi_dyn_ch_all_box, echo = FALSE}
-p_ioi_dyn_ch_box <- ggplot(data = ioi_dyn_ch, aes(x = Change, y = Mean, fill = Condition)) +
+p_ioi_dyn_ch_box <- ggplot(data = ioi_dyn_ch, aes(x = Boundary, y = Mean, fill = Condition)) +
   geom_boxplot() +
   geom_dotplot(binaxis = "y", stackdir = "center", dotsize = 1, position = position_dodge(0.75)) +
   geom_hline(yintercept = 1, linetype = "dashed") + # Tempo
@@ -398,7 +607,34 @@ p_ioi_dyn_ch_box <- ggplot(data = ioi_dyn_ch, aes(x = Change, y = Mean, fill = C
 p_ioi_dyn_ch_box
 ```
 
-#### Statistics (TBC)
+#### Statistics
+##### Normality check
+```{r normality5, echo = FALSE}
+ioi_dyn_ch_norm <- by(ioi_dyn_ch$Mean, list(ioi_dyn_ch$Condition, ioi_dyn_ch$Boundary), shapiro.test)
+print(ioi_dyn_ch_norm)
+```
+  - Violate the normality assumption
+
+##### Two-way ANOVA (ez)
+```{r stats9, echo = FALSE}
+ioi_dyn_ch_aov <- ezANOVA(
+  data = df_ioi_dyn
+  , dv = .(IOI)
+  , wid = .(SubNr)
+  , within = .(Condition, Boundary)
+  , type = 3
+  , detailed = TRUE
+)
+ioi_dyn_ch_aov$ANOVA$F <- round(ioi_dyn_ch_aov$ANOVA$F, 4)
+ioi_dyn_ch_aov$ANOVA$p <- round(ioi_dyn_ch_aov$ANOVA$p, 4)
+print(ioi_dyn_ch_aov)
+```
+
+##### Two-way ANOVA (aov)
+```{r stats10, echo = FALSE}
+ioi_dyn_ch_aov_2 <- aov(Mean ~ Condition*Boundary + Error(SubNr/(Condition*Boundary)), data = ioi_dyn_ch)
+print(summary(ioi_dyn_ch_aov_2))
+```
 
 ### 5. Trial by trial - individual{#dyn_ind_trial}
 - Average normIOIs for each trial for each participant.
@@ -452,6 +688,157 @@ p_ioi_dyn_trial_all <- ggplot(data = ioi_dyn_trial_all, aes(x = TrialNr, y = Mea
   geom_errorbar(aes(ymin = Mean - SEM, ymax = Mean + SEM), width = .2, position = position_dodge(.2)) + 
   labs(x = "Trial", y = "Normalised IOI", subtitle = "IOI: Dynamics") + scale_x_continuous(breaks=seq(1,8,1))
 p_ioi_dyn_trial_all
+```
+
+### 7. Variability all - individual{#dyn_ind_var_all}
+- Average variability for each participant.
+- IOI variability = SD/mean IOI (per trial)
+
+```{r ioi_dyn_var, echo = FALSE}
+# Create a data frame for variability (SD/)
+df_ioi_dyn_var <- data.frame()
+for (subnr in unique(df_ioi_dyn$SubNr)){
+  for (block in unique(df_ioi_dyn$BlockNr)){
+    cond = as.character(unique(df_ioi_dyn$Condition[df_ioi_dyn$SubNr == subnr & df_ioi_dyn$BlockNr == block]))
+    skill = as.character(unique(df_ioi_dyn$Skill[df_ioi_dyn$SubNr == subnr & df_ioi_dyn$BlockNr == block]))
+    for (trial in unique(df_ioi_dyn$TrialNr)){
+      df_current <- df_ioi_dyn %>% dplyr::filter(SubNr == subnr & BlockNr == block & TrialNr == trial)
+      if (nrow(df_current) != 0){
+        df_ioi_dyn_var <- rbind(df_ioi_dyn_var, 
+                                data.frame(subnr, block, trial, cond, skill, sd(df_current$IOI)/mean(df_current$IOI)))
+      }
+    }
+  }
+}
+colnames(df_ioi_dyn_var) <- c("SubNr", "BlockNr", "TrialNr", "Condition", "Skill", "Variability")
+
+# Average variability
+# For each individual
+ioi_dyn_var <- aggregate(Variability~SubNr*Condition*Skill, data = df_ioi_dyn_var,
+                     FUN = function(x){c(N = length(x), mean = mean(x), sd = sd(x))})
+ioi_dyn_var <- cbind(ioi_dyn_var[,1:3], as.data.frame(ioi_dyn_var[,4]))
+# Change colnames
+colnames(ioi_dyn_var) <- c("SubNr", "Condition", "Skill", "N", "Mean", "SD")
+print(ioi_dyn_var)
+```
+
+#### Plot
+##### Bar graph
+- Error bars show SD of the mean
+
+```{r ioi_dyn_var_bar, echo = FALSE}
+p_ioi_dyn_var <- ggplot(data = ioi_dyn_var, aes(x = SubNr, y = Mean, fill = Condition)) +
+  geom_bar(stat = "identity", position = position_dodge()) +
+  geom_errorbar(aes(ymin = Mean - SD, ymax = Mean + SD),
+                width = .2, position = position_dodge(1)) +
+  labs(y = "Variability (SD/mean IOI)", subtitle = "IOI: Dynamics")
+p_ioi_dyn_var
+```
+
+### 8. Variability all - group{#dyn_group_var_all}
+- Average variability for each condition.
+
+```{r ioi_dyn_var_all, echo = FALSE}
+# Group mean
+ioi_dyn_var_all <- aggregate(Mean~Condition*Skill, data = ioi_dyn_var,
+                           FUN = function(x){round(c(N = length(x), mean = mean(x), sd = sd(x), sem = sd(x)/sqrt(length(x))), 4)})
+ioi_dyn_var_all <- cbind(ioi_dyn_var_all[,1:2], as.data.frame(ioi_dyn_var_all[,3]))
+# Change colnames
+colnames(ioi_dyn_var_all) <- c("Condition", "Skill", "N", "Mean", "SD", "SEM")
+print(ioi_dyn_var_all)
+```
+
+#### Plot
+##### Bar graph
+- Error bars show SEM of the mean
+
+```{r ioi_dyn_var_all_bar, echo = FALSE}
+p_ioi_dyn_var_all <- ggplot(data = ioi_dyn_var_all, aes(x = Condition, y = Mean, fill = Condition)) +
+  geom_bar(stat = "identity", position = position_dodge()) +
+  geom_errorbar(aes(ymin = Mean - SEM, ymax = Mean + SEM),
+                width = .2, position = position_dodge()) +
+  labs(y = "Variability (SD/mean IOI)", subtitle = "IOI: Dynamics") +
+  theme(legend.position = "None")
+p_ioi_dyn_var_all
+```
+
+##### Box plot
+```{r ioi_dyn_var_all_box, echo = FALSE}
+p_ioi_dyn_var_box <- ggplot(data = ioi_dyn_var, aes(x = Condition, y = Mean, fill = Condition)) +
+  geom_boxplot() +
+  geom_dotplot(binaxis = "y", stackdir = "center", dotsize = 1) +
+  labs(y = "Variability (SD/mean IOI)", subtitle = "IOI: Dynamics") +
+  theme(legend.position = "None")
+p_ioi_dyn_var_box
+```
+
+#### Statistics
+##### Normality check
+```{r normality6, echo = FALSE}
+ioi_dyn_var_norm <- by(ioi_dyn_var$Mean, list(ioi_dyn_var$Condition), shapiro.test)
+print(ioi_dyn_var_norm)
+```
+  - Violate the normality assumption
+
+```{r stats11, echo = FALSE}
+ioi_dyn_var_ttest <- t.test(ioi_dyn_var$Mean[ioi_dyn_var$Condition == "teaching"], ioi_dyn_var$Mean[ioi_dyn_var$Condition == "performing"], paired = TRUE)
+print(ioi_dyn_var_ttest)
+```
+
+```{r stats12, echo = FALSE}
+ioi_dyn_var_cohend <- cohen.d(ioi_dyn_var$Mean, ioi_dyn_var$Condition, paired = TRUE)
+print(ioi_dyn_var_cohend)
+```
+
+### 9. Variability trial-by-trial - individual{#dyn_ind_var_trial}
+- Average variability for each trial for each participant.
+
+```{r ioi_dyn_var_trial, echo = FALSE}
+# For each individual
+ioi_dyn_var_trial <- aggregate(Variability~SubNr*Condition*Skill*TrialNr, data = df_ioi_dyn_var,
+                         FUN = function(x){c(N = length(x), mean = mean(x))})
+ioi_dyn_var_trial <- cbind(ioi_dyn_var_trial[,1:4], as.data.frame(ioi_dyn_var_trial[,5]))
+# Change colnames
+colnames(ioi_dyn_var_trial) <- c("SubNr", "Condition", "Skill", "TrialNr", "N", "Mean")
+print(ioi_dyn_var_trial)
+```
+
+#### Plot
+##### Line graph
+```{r ioi_dyn_var_trial_line, echo = FALSE, fig.height = 8}
+p_ioi_dyn_var_trial <- ggplot(data = ioi_dyn_var_trial, aes(x = TrialNr, y = Mean, group = Condition, colour = Condition)) +
+  geom_line() +
+  geom_point() +
+  facet_wrap(SubNr ~ .) + 
+  labs(x = "Trial", y = "Variability (SD/mean IOI)", subtitle = "IOI: Dynamics") + scale_x_continuous(breaks=seq(1,8,1))
+p_ioi_dyn_var_trial
+```
+
+### 10. Variability trial-by-trial - group{#dyn_group_var_trial}
+Average variability for each trial for each condition.
+
+```{r ioi_dyn_var_trial_all, echo = FALSE}
+# Group mean
+ioi_dyn_var_trial_all <- aggregate(Mean~Condition*Skill*TrialNr, data = ioi_dyn_var_trial,
+                           FUN = function(x){round(c(N = length(x), mean = mean(x), sd = sd(x), sem = sd(x)/sqrt(length(x))), 4)})
+ioi_dyn_var_trial_all <- cbind(ioi_dyn_var_trial_all[,1:3], as.data.frame(ioi_dyn_var_trial_all[,4]))
+# Change colnames
+colnames(ioi_dyn_var_trial_all) <- c("Condition", "Skill", "TrialNr", "N", "Mean", "SD", "SEM")
+print(ioi_dyn_var_trial_all)
+```
+
+#### Plot
+##### Line graph
+- Error bars show SEM of the mean
+
+```{r ioi_dyn_var_trial_all_line, echo = FALSE}
+p_ioi_dyn_var_trial_all <- ggplot(data = ioi_dyn_var_trial_all, 
+                                  aes(x = TrialNr, y = Mean, group = Condition, colour = Condition)) +
+  geom_line(position = position_dodge(.2)) +
+  geom_point(position = position_dodge(.2)) +
+  geom_errorbar(aes(ymin = Mean - SEM, ymax = Mean + SEM), width = .2, position = position_dodge(.2)) + 
+  labs(x = "Trial", y = "Variability (SD/mean IOI)", subtitle = "IOI: Dynamics") + scale_x_continuous(breaks=seq(1,8,1))
+p_ioi_dyn_var_trial_all
 ```
 
 ## Sequence plot
