--- a/script/RNotebook/articulation.Rmd
+++ b/script/RNotebook/articulation.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 'Analysis: The Sound of Teaching Music 2'
+title: 'Articulation Analysis: The Sound of Teaching Music 2'
 output:
   html_notebook: default
 editor_options: 
